containerization/kubernetes/networks/network-policies/test-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: <name-of-policy>
  namespace: <namespace-name>
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pod-label-app-frontend
  namespace: nw-test
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
        - namespaceSelector:
            matchLabels:
              name: nw-test
        - ipBlock:
            cidr: 10.244.10.23/32 || 10.244.0.0/16
      ports:
        - protocol: TCP -> accepted, UDP / http/ https -> reject
          port: 80 -> port - accepted , !80 -> reject
  egress: 
    - to: 
      - podSelector:
          matchLabels:
            app: frontend
      - namespaceSelector:
          matchLabels:
            name: nw-test
      - ipBlock:
          cidr: 10.0.0.0/16 
          except: 
            - 10.0.0.0/32
      ports:
        - protocol: TCP
          port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-pod
  namespace: nw-test
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Egress
  egress: 
    - to: 
      - podSelector:
          matchLabels:
            app: frontend
      - namespaceSelector:
          matchLabels:
            name: nw-test
      - ipBlock:
          cidr: 10.0.0.0/16 
          except: 
            - 10.0.0.0/32
      ports:
        - protocol: TCP
          port: 80
